--- a/homework-day-2/index.html
+++ b/homework-day-2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework day-2</title>
-    <source src="main.js" type="">
+    <script src="main.js" type="">
     <h1>Homework day 2</h1>
 </head>
 <body>
